footer spacing fix

--- a/frontend/css/styles.css
+++ b/frontend/css/styles.css
@@ -78,6 +78,10 @@ h2.title {
 	border-bottom: 1px solid #ddd;
 }
 
+.categories ul li:last-child {
+	border-bottom: 0;
+}
+
 .categories ul li .glyphicon {
 	position: absolute;
 	right: 2.5%;
@@ -106,6 +110,10 @@ h2.title {
 	position: relative;
 	padding: 5%;
 	padding-right: 20%;
+}
+
+footer {
+	margin-top: 5%;
 }
 
 .social {
